--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fiatconnect-widget",
   "version": "0.1.0",
-  "homepage": "https://fiatconnect.github.io/fiatconnect-widget",
+  "homepage": "https://tharmigaloganathan.github.io/fiatconnect-widget",
   "private": true,
   "dependencies": {
     "@fiatconnect/fiatconnect-sdk": "^0.5.19",
