--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "@rainbow-me/rainbowkit": "^1.1.1",
     "@testing-library/react": "^13.0.0",
     "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
+    "@types/node": "^18.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "buffer": "^6.0.3",
     "ethers": "^6.8.0",
+    "firebase-tools": "^13.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
